# text-data-processing-labs

lab1/: README.MD  pyproject.toml
lab1/task2/: card_encoder.py
lab1/task3/: text_analizer.py
lab1/utils/: download_nltk.py  get_text_from_file.py
lab2/: README.MD  doc4.txt  ngram_representation.py  pyproject.toml  text_clustering.py  train_word2vec.py
lab2/utils/: get_text_from_file.py  lemmatizator.py
lab3/: README.MD  classifier.ipynb  documents1.csv  lemmatizator.py  pyproject.toml
lab4/: README.MD  bbc-news-data1.csv  pyproject.toml  task1.ipynb  task2.ipynb
lab5/: README.MD  classifier.ipynb  pyproject.toml
labs6_7_8/: README.MD  flights.json  fly.json  lab6_1.ipynb  lab6_2.ipynb  lab7_1.ipynb  lab7_2.ipynb  lab8.ipynb  pyproject.toml
