[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["OlhaMish <olgami1402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11 <3.12"
scikit-learn = "1.3"
numpy = "1.23.2"
nltk = "^3.9.1"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
gensim = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
