[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["OlhaMish <olgami1402@gmail.com>"]
readme = "README.md"

#[tool.poetry.dependencies]
#python = ">3.11 <3.12"
#scikit-learn = "^1.6.1"
#pandas = "^2.2.3"
#nltk = "^3.9.1"
#fasttext = "^0.9.3"
#gensim = "^4.3.3"
#numpy = "1.23.2"

[tool.poetry.dependencies]
python = ">3.11 <3.12"
numpy = "1.26.4"
pandas = "^2.1.4"
scikit-learn = "^1.6.1"
nltk = "^3.9.1"
fasttext = "^0.9.3"
gensim = "^4.3.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
