[tool.poetry]
name = "lab4"
version = "0.1.0"
description = ""
authors = ["OlhaMish <olgami1402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gensim = "^4.3.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
nltk = "^3.9.1"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
