[tool.poetry]
name = "lab5"
version = "0.1.0"
description = ""
authors = ["OlhaMish <olgami1402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
#python = "^3.11"
python = ">=3.11,<3.13"
spacy = "^3.8.5"
pandas = "^2.2.3"
textblob = "^0.19.0"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
openai = "^1.73.0"
tiktoken = "^0.9.0"
gensim = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
