[tool.poetry]
name = "lab6"
version = "0.1.0"
description = ""
authors = ["OlhaMish <olgami1402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
spacy = "^3.8.5"
transformers = {extras = ["torch"], version = "^4.51.3"}
tensorflow = "^2.19.0"
keras = "^3.9.2"
tf-keras = "^2.19.0"
torch = "^2.7.0"
matplotlib = "^3.10.1"
datasets = "^3.5.1"
sentencepiece = "^0.2.0"
accelerate = ">=0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
